fix(css): Improve whitespace styling

--- a/public/css/base/global.css
+++ b/public/css/base/global.css
@@ -22,7 +22,7 @@ body {
 
 main {
 	margin-block-end: auto;
-	padding-block: 2rem 3rem;
+	padding-block: 1rem 3rem;
 }
 
 input,
