--- a/public/css/components/search.css
+++ b/public/css/components/search.css
@@ -24,8 +24,8 @@
 
 .Search-list {
 	display: grid;
-	gap: clamp(1rem, 4vi, 2rem);
-	grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+	gap: clamp(1.5rem, 4vi, 2rem);
+	grid-template-columns: repeat(auto-fill, minmax(9rem, 1fr));
 	list-style: none;
 }
 
